# mypostbank-ui/src/app/services/models/bank-account.ts
@@ -2,7 +2,6 @@
 /* eslint-disable */
 import { Card } from '../models/card';
 import { Credit } from '../models/credit';
-import { FileEntity } from '../models/file-entity';
 import { User } from '../models/user';
 export interface BankAccount {
   accountNo?: string;
@@ -11,7 +10,6 @@ export interface BankAccount {
   cards?: Array<Card>;
   createdBy?: number;
   createdDate?: string;
-  file?: FileEntity;
   id?: number;
   lastModifiedBy?: number;
   lastModifiedDate?: string;
