# mypostbank-ui/src/openapi/openapi.json
@@ -1788,65 +1788,6 @@
         }
       }
     },
-    "/admin/files/{fileType}/{id}": {
-      "get": {
-        "tags": [
-          "admin-controller"
-        ],
-        "summary": "Fetch files by type and ID",
-        "operationId": "getFilesByTypeAndId",
-        "parameters": [
-          {
-            "name": "fileType",
-            "in": "path",
-            "description": "File type (CIN_FILE or CREDIT)",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-                "CREDIT",
-                "CIN_FILE"
-              ]
-            }
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Files retrieved",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/FileEntity"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Files not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/FileEntity"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/admin/credit-requests": {
       "get": {
         "tags": [
@@ -2378,9 +2319,6 @@
             "items": {
               "$ref": "#/components/schemas/Credit"
             }
-          },
-          "file": {
-            "$ref": "#/components/schemas/FileEntity"
           }
         }
       },
@@ -2523,44 +2461,6 @@
             "items": {
               "$ref": "#/components/schemas/RepaymentDetail"
             }
-          },
-          "files": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/FileEntity"
-            }
-          }
-        }
-      },
-      "FileEntity": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "fileName": {
-            "type": "string"
-          },
-          "fileData": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "format": "byte"
-            }
-          },
-          "fileType": {
-            "type": "string",
-            "enum": [
-              "CREDIT",
-              "CIN_FILE"
-            ]
-          },
-          "bankAccount": {
-            "$ref": "#/components/schemas/BankAccount"
-          },
-          "credit": {
-            "$ref": "#/components/schemas/Credit"
           }
         }
       },
